# spotify-thing

./: .gitignore  pyproject.toml  shell.nix  sqlc.yaml
src/db/: models.py  push.py  query.py  query.sql  schema.sql
src/lib/: spotify.py  spotify_types.py
src/spotify_thing/: main.py
