[project]
name = "spotify-thing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.9",
    "asyncpg>=0.30.0",
    "mypy>=1.13.0",
    "pydantic>=2.10.3",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlparse>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
